<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edge_gradient"
        tools:context=".SenderActivity">

        <!-- EditText for entering a message  -->
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/enter_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:ems="10"
            android:hint="@string/textPersonName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/editTextPhone"
            app:layout_constraintVertical_bias="0.045" />


        <Button
            android:id="@+id/btnAddContact"
            android:layout_width="42dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:padding="2dp"
            android:textColor="#fff"
            app:icon="@drawable/ic_menu_invite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <EditText
            android:id="@+id/smsEditText"
            android:layout_width="297dp"
            android:layout_height="97dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="276dp"
            android:autofillHints=""
            android:hint="@string/enter_message_here"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/display_contacts_recycler_view"
            app:layout_constraintEnd_toStartOf="@+id/inline_contact_lottie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/inline_contact_lottie"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="29dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"

            app:layout_constraintStart_toEndOf="@+id/smsEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1"
            app:lottie_autoPlay="false"
            app:lottie_loop="false" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/display_contacts_recycler_view"
            android:layout_width="353dp"
            android:layout_height="378dp"
            android:layout_margin="@dimen/dp_8"

            android:layout_marginBottom="3dp"

            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_contact_button" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation_view"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"

            app:layout_constraintBottom_toBottomOf="@id/display_contacts_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/display_contacts_recycler_view"
            app:layout_constraintWidth_percent="0.3"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <!-- The retryApp() method will be called by this button.  -->

        <!-- The smsSendMessage() method will be called by this button.  -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_excel_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:layout_marginEnd="16dp"

            android:layout_marginBottom="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_contact_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"

            android:padding="@dimen/dp_8"
            android:text="@string/send_a_message"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:icon="@drawable/ic_message_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/select_all"
            android:onClick="selector"
            android:text="@string/select_all"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/display_contacts_recycler_view"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="48dp"
            android:indeterminate="false"
            android:minWidth="200dp"
            android:minHeight="50dp"
            android:visibility="gone"
            android:progress="1"
            app:layout_constraintBottom_toTopOf="@+id/textViewProgress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/send_contact_button"
            app:layout_constraintVertical_bias="0.517" />

        <TextView
            android:id="@+id/textViewProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_alignLeft="@+id/progressBar"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/lottie_animation_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.669"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sent_sms_lottie" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/sent_sms_lottie"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_0"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/lottie_animation_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

