<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soft_gradient"
    tools:context=".HomeActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:padding="6dp"
        app:backgroundTint="#AA00FF"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="Enter How Much Cookies You Want"
        app:srcCompat="@drawable/add"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/send_contact_button_id"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#00BFA5"
                app:cardCornerRadius="6dp"
                app:cardMaxElevation="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imgHome"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/message" />

                </RelativeLayout>
                <TextView
                android:layout_width="62dp"
                android:layout_height="48dp"
                android:text="@string/ContactCardDescription"
                android:textSize="@dimen/dp_15"
                android:layout_marginStart="5dp"
                android:textColor="@color/color_sub_header"
                app:layout_constraintEnd_toEndOf="parent" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/send_excel_button_id"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#0091EA"
                app:cardCornerRadius="6dp"
                app:cardMaxElevation="6dp">

                <TextView
                    android:layout_width="62dp"
                    android:layout_height="48dp"
                    android:text="@string/ExcelCardDescription"
                    android:textSize="@dimen/dp_15"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/color_sub_header"
                    app:layout_constraintEnd_toEndOf="parent" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imageHome"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/excelsms" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/send_inline_button_id"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#FF6D00"
                app:cardCornerRadius="6dp"
                app:cardMaxElevation="6dp">

                <TextView
                    android:layout_width="62dp"
                    android:layout_height="48dp"
                    android:text="@string/InlineCardDescription"
                    android:textSize="@dimen/dp_15"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/color_header"
                    app:layout_constraintEnd_toEndOf="parent" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/dirmessage" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#C51162"
                app:cardCornerRadius="6dp"
                app:cardMaxElevation="6dp">

                <TextView
                    android:layout_width="62dp"
                    android:layout_height="48dp"
                    android:text="@string/SettingCardDescription"
                    android:textSize="@dimen/dp_15"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/color_sub_header"
                    app:layout_constraintEnd_toEndOf="parent" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/reglages" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="ISMS"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:text="Send Bulk Messages"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>